--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>    
             </div>
             <div class="secondhalf">
-                <img src="img/tikeshv.jpg" class = "tik" alt="Tikesh">
+                <img src="img/Tikeshv.jpg" class = "tik" alt="Tikesh">
             </div>
         </div>
 
