--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         I am here and happy to mentor you. You can check my website and my Youtube as well it is better to subscribe the channel and stay attached with this website
                     </p>
                 <div class="btn1">
-                    <button href="https://www.youtube.com/c/TikeshVaishnav"class="btn1">Go To MY channel</button>
+                    <button onclick="https://www.youtube.com/c/TikeshVaishnav"class="btn1">Go To MY channel</button>
                 </div>    
             </div>
             <div class="secondhalf">
